[gd_scene load_steps=8 format=3 uid="uid://c7ukalby1hmqq"]

[ext_resource type="Texture2D" uid="uid://bp4erc4ml58pk" path="res://sprites/bg.png" id="1_t3f6g"]
[ext_resource type="Script" path="res://scripts/win_screen.gd" id="1_unsqn"]
[ext_resource type="Texture2D" uid="uid://cxdrk80a8onq3" path="res://sprites/pyramid_bg.png" id="2_pj2eb"]
[ext_resource type="Texture2D" uid="uid://da0cs5cv0dogq" path="res://sprites/pyramid.png" id="3_hrohc"]
[ext_resource type="Theme" uid="uid://b2aufwxl352ci" path="res://menu.tres" id="4_dhkqb"]
[ext_resource type="Texture2D" uid="uid://dohi4lypfryv7" path="res://sprites/tilemap.png" id="6_wtjp8"]
[ext_resource type="FontFile" uid="uid://bx5ihofp77q4g" path="res://CCFONT.TTF" id="7_ub86f"]

[node name="WinScreen" type="Node2D"]
script = ExtResource("1_unsqn")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(128, 128)
texture = ExtResource("1_t3f6g")

[node name="PyramidBg" type="Sprite2D" parent="."]
position = Vector2(128, 128)
texture = ExtResource("2_pj2eb")

[node name="Pyramid" type="Sprite2D" parent="."]
clip_children = 2
position = Vector2(128, 128)
texture = ExtResource("3_hrohc")

[node name="Level12" type="ColorRect" parent="Pyramid"]
offset_left = -104.0
offset_top = -56.0
offset_right = 104.0
offset_bottom = 52.0
color = Color(0.976471, 0.14902, 0.447059, 1)

[node name="Home" type="Button" parent="."]
offset_left = 88.0
offset_top = 192.0
offset_right = 168.0
offset_bottom = 210.0
theme = ExtResource("4_dhkqb")
text = "Menu
"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Coins" type="Sprite2D" parent="Control"]
position = Vector2(120, 64)
scale = Vector2(2, 2)
texture = ExtResource("6_wtjp8")
hframes = 8
vframes = 8
frame = 39

[node name="CoinsText" type="Label" parent="Control"]
layout_mode = 0
offset_left = 132.0
offset_top = 56.0
offset_right = 188.0
offset_bottom = 72.0
theme_override_fonts/font = ExtResource("7_ub86f")
text = "0"

[node name="Text3" type="Label" parent="."]
offset_top = 36.0
offset_right = 256.0
offset_bottom = 52.0
theme_override_colors/font_color = Color(0.152941, 0.156863, 0.12549, 1)
theme_override_fonts/font = ExtResource("7_ub86f")
theme_override_font_sizes/font_size = 16
text = "Escaped with"
horizontal_alignment = 1

[node name="Text2" type="Label" parent="."]
offset_top = 39.0
offset_right = 256.0
offset_bottom = 55.0
theme_override_colors/font_color = Color(0.498039, 0.482353, 0.411765, 1)
theme_override_fonts/font = ExtResource("7_ub86f")
theme_override_font_sizes/font_size = 16
text = "Escaped with"
horizontal_alignment = 1

[node name="Text" type="Label" parent="."]
offset_top = 42.0
offset_right = 256.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("7_ub86f")
theme_override_font_sizes/font_size = 16
text = "Escaped with"
horizontal_alignment = 1

[connection signal="pressed" from="Home" to="." method="_on_home_pressed"]
